fix: AuthenticationService에서 머지된 내용 로직 수정과 개선